--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "ts-node": "^10.4.0"
   },
   "dependencies": {
-    "ftp": "^0.3.10",
+    "ftp": "https://github.com/icetee/node-ftp.git",
     "handlebars": "^4.7.7",
     "inquirer": "^8.2.0",
     "progress-stream": "^2.0.0",
