--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "@types/inquirer": "^8.1.3",
     "@types/node": "^17.0.8",
     "@types/progress-stream": "^2.0.2",
+    "@typescript-eslint/eslint-plugin": "^5.9.1",
+    "@typescript-eslint/parser": "^5.9.1",
     "esbuild": "^0.14.11",
+    "eslint": "^8.6.0",
     "pkg": "^5.5.1",
+    "prettier": "^2.5.1",
     "ts-node": "^10.4.0"
   },
   "dependencies": {
@@ -23,6 +27,7 @@
     "handlebars": "^4.7.7",
     "inquirer": "^8.2.0",
     "progress-stream": "^2.0.0",
+    "strongly-typed-events": "^2.1.14",
     "ts-pattern": "^3.3.4",
     "typescript": "^4.5.4"
   }
