--- a/package.json
+++ b/package.json
@@ -1,35 +1,54 @@
 {
   "name": "weebsync",
-  "version": "1.0.0",
-  "main": "index.js",
+  "version": "0.2.0",
+  "description": "A small tool to automatically sync files from an ftp server.",
   "license": "MIT",
-  "type": "module",
+  "main": "./build/main.js",
   "scripts": {
-    "build-app": "esbuild src/index.ts --platform=node --bundle --outfile=build/out.js",
-    "build-executables": "pkg -c pkg.json build/out.js --options=no-deprecation -o dist/weebsync",
-    "build": "yarn run build-app && yarn run build-executables"
+    "build": "tsc && sass src/main.scss build/main.css",
+    "watch": "tsc -w",
+    "lint": "eslint -c .eslintrc --ext .ts ./src",
+    "start": "npm run build && electron ./build/main.js",
+    "app:dist": "yarn build && electron-builder -p never --win",
+    "postinstall": "electron-builder install-app-deps"
   },
+  "build": {
+    "appId": "weeb.sync",
+    "productName": "weebsync",
+    "files": [
+      "build/**/*",
+      "static/**/*",
+      "index.html"
+    ],
+    "mac": {
+      "category": "files.sync",
+      "icon": "static/icon.icns"
+    },
+    "win": {
+      "target": "portable",
+      "icon": "static/icon.ico"
+    }
+  },
+  "author": "Bastian Ganze",
   "devDependencies": {
     "@types/ftp": "^0.3.33",
-    "@types/inquirer": "^8.1.3",
     "@types/node": "^17.0.8",
     "@types/progress-stream": "^2.0.2",
-    "@typescript-eslint/eslint-plugin": "^5.9.1",
-    "@typescript-eslint/parser": "^5.9.1",
-    "esbuild": "^0.14.11",
-    "eslint": "^8.6.0",
-    "pkg": "^5.5.1",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
+    "electron": "^16.0.6",
+    "electron-builder": "^22.14.5",
+    "eslint": "^7.32.0",
     "prettier": "^2.5.1",
-    "ts-node": "^10.4.0"
+    "sass": "^1.47.0",
+    "typescript": "^4.5.2"
   },
   "dependencies": {
-    "chokidar": "^3.5.2",
     "ftp": "https://github.com/icetee/node-ftp.git",
+    "chokidar": "^3.5.2",
     "handlebars": "^4.7.7",
-    "inquirer": "^8.2.0",
     "progress-stream": "^2.0.0",
     "strongly-typed-events": "^2.1.14",
-    "ts-pattern": "^3.3.4",
-    "typescript": "^4.5.4"
+    "ts-pattern": "^3.3.4"
   }
 }
