--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,10 @@
 name: Build/release
 
-on: push
-
+on: 
+  push:
+    tags:
+    - 'v[0-9]+.[0-9]+.[0-9]+'
+  
 jobs:
   release:
     runs-on: ${{ matrix.os }}
