--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "license": "MIT",
   "main": "./build/main.js",
   "scripts": {
-    "build": "tsc && sass src/main.scss build/main.css",
+    "build-main": "esbuild src/main/index.ts --platform=node --target=node16 --bundle --external:electron --outfile=build/main.js",
+    "build-preload": "esbuild src/preload/index.ts --platform=node --bundle --external:electron  --outfile=build/preload.js",
+    "build-renderer": "vite build",
+    "build": "yarn run build-renderer && yarn run build-main && yarn run build-preload",
     "watch": "tsc -w",
     "lint": "eslint -c .eslintrc --ext .ts ./src",
     "start": "npm run build && electron ./build/main.js",
@@ -17,8 +20,7 @@
     "productName": "weebsync",
     "files": [
       "build/**/*",
-      "static/**/*",
-      "index.html"
+      "static/**/*"
     ],
     "mac": {
       "category": "files.sync",
@@ -38,17 +40,28 @@
     "@typescript-eslint/parser": "^4.33.0",
     "electron": "^16.0.6",
     "electron-builder": "^22.14.5",
+    "esbuild": "^0.14.11",
     "eslint": "^7.32.0",
     "prettier": "^2.5.1",
     "sass": "^1.47.0",
-    "typescript": "^4.5.2"
+    "sass-loader": "^10.1.1",
+    "typescript": "^4.4.4",
+    "vue": "^2.6.12",
+    "vue-class-component": "^7.2.6",
+    "vue-property-decorator": "^9.1.2",
+    "vue-router": "^3.5.1",
+    "vuex": "^3.6.2"
   },
   "dependencies": {
-    "ftp": "https://github.com/icetee/node-ftp.git",
     "chokidar": "^3.5.2",
+    "ftp": "https://github.com/icetee/node-ftp.git",
     "handlebars": "^4.7.7",
     "progress-stream": "^2.0.0",
     "strongly-typed-events": "^2.1.14",
-    "ts-pattern": "^3.3.4"
+    "ts-pattern": "^3.3.4",
+    "vite": "^2.0.2",
+    "vite-plugin-components": "^0.13.2",
+    "vite-plugin-vue2": "^1.2.1",
+    "vue-template-compiler": "^2.6.12"
   }
 }
