--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,17 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
+    "target": "esnext",
+    "module": "esnext",
     "noImplicitAny": true,
     "sourceMap": true,
+    "moduleResolution": "node",
     "outDir": "build",
     "esModuleInterop": true,
+    "experimentalDecorators": true,
     "baseUrl": ".",
+    "types": [
+      "vite/client"
+    ],
     "paths": {
       "*": ["node_modules/*"]
     }
