--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "esbuild": "^0.14.11",
     "eslint": "^7.32.0",
     "prettier": "^2.5.1",
-    "sass": "^1.47.0",
+    "sass": "1.32.13",
     "sass-loader": "^10.1.1",
     "typescript": "^4.4.4",
     "vue": "^2.6.12",
@@ -53,6 +53,7 @@
     "vuex": "^3.6.2"
   },
   "dependencies": {
+    "@fontsource/lato": "^4.5.0",
     "chokidar": "^3.5.2",
     "ftp": "https://github.com/icetee/node-ftp.git",
     "handlebars": "^4.7.7",
@@ -62,6 +63,8 @@
     "vite": "^2.0.2",
     "vite-plugin-components": "^0.13.2",
     "vite-plugin-vue2": "^1.2.1",
-    "vue-template-compiler": "^2.6.12"
+    "vue-template-compiler": "^2.6.12",
+    "vue2-perfect-scrollbar": "^1.5.2",
+    "vuetify": "^2.6.2"
   }
 }
