--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
   },
   "author": "Bastian Ganze",
   "devDependencies": {
-    "@types/ftp": "^0.3.33",
     "@types/node": "^17.0.8",
     "@types/progress-stream": "^2.0.2",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
@@ -41,7 +40,7 @@
     "electron-builder": "^22.14.5",
     "esbuild": "^0.14.11",
     "eslint": "^7.32.0",
-    "prettier": "^2.5.1",
+    "prettier": "^2.8.3",
     "sass": "1.32.13",
     "sass-loader": "^10.1.1",
     "typescript": "^4.4.4",
@@ -54,10 +53,9 @@
   "dependencies": {
     "@fontsource/lato": "^4.5.0",
     "@mdi/font": "^6.6.96",
+    "basic-ftp": "^5.0.2",
     "chokidar": "^3.5.2",
-    "ftp": "https://github.com/icetee/node-ftp.git",
     "handlebars": "^4.7.7",
-    "progress-stream": "^2.0.0",
     "strongly-typed-events": "^2.1.14",
     "ts-pattern": "^3.3.4",
     "vite": "^2.0.2",
