--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "prettier": "^2.8.3",
     "sass": "1.32.13",
     "sass-loader": "^10.1.1",
-    "typescript": "^4.4.4",
+    "typescript": "4.5",
     "vue": "^2.6.12",
     "vue-class-component": "^7.2.6",
     "vue-property-decorator": "^9.1.2",
@@ -52,12 +52,13 @@
   },
   "dependencies": {
     "@fontsource/lato": "^4.5.0",
-    "@mdi/font": "^6.6.96",
+    "@mdi/font": "^7.1.96",
+    "@mdi/js": "^7.1.96",
     "basic-ftp": "^5.0.2",
     "chokidar": "^3.5.2",
     "handlebars": "^4.7.7",
     "strongly-typed-events": "^2.1.14",
-    "ts-pattern": "^3.3.4",
+    "ts-pattern": "^4.1.3",
     "vite": "^2.0.2",
     "vite-plugin-components": "^0.13.2",
     "vite-plugin-vue2": "^1.2.1",
