--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,12 +23,14 @@ jobs:
           node-version: 16
 
       - name: Install Snapcraft
-        uses: samuelmeuli/action-snapcraft@v1
         # Only install Snapcraft on Ubuntu
         if: startsWith(matrix.os, 'ubuntu')
-        with:
-          # Log in to Snap Store
-          snapcraft_token: ${{ secrets.snapcraft_token }}
+        run: sudo snap install snap-store
+      - name: Login to Snapcraft
+        if: startsWith(matrix.os, 'ubuntu')
+        env:
+          SNAPCRAFT_STORE_CREDENTIALS: ${{ secrets.snapcraft_token }}
+        run: snapcraft login
 
       - name: Build/release Electron app
         uses: samuelmeuli/action-electron-builder@v1
