--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Install Snapcraft
         # Only install Snapcraft on Ubuntu
         if: startsWith(matrix.os, 'ubuntu')
-        run: sudo snap install snap-store
+        uses: samuelmeuli/action-snapcraft@v1
       - name: Login to Snapcraft
         if: startsWith(matrix.os, 'ubuntu')
         env:
