attempt to fix snapcraft

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
         env:
           SNAPCRAFT_STORE_CREDENTIALS: '{"token": "${{ secrets.SNAPCRAFT_TOKEN }}"}'
         run: |
-          echo $SNAPCRAFT_STORE_CREDENTIALS
+          snapcraft login
 
       - name: Build/release Electron app
         uses: samuelmeuli/action-electron-builder@v1
