--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Login to Snapcraft
         if: startsWith(matrix.os, 'ubuntu')
         env:
-          SNAPCRAFT_STORE_CREDENTIALS: '{"token": "${{ secrets.SNAPCRAFT_TOKEN }}"}'
+          SNAPCRAFT_STORE_CREDENTIALS: '{"token": "${{ secrets.SNAPCRAFT_TOKEN | b64enc }}"}'
         run: |
           snapcraft login
 
