--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
 
     strategy:
       matrix:
-        os: [macos-latest, ubuntu-latest, windows-latest]
+        os: [macos-latest, windows-latest]
 
     steps:
       - name: Check out Git repository
@@ -21,17 +21,6 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 16
-
-      - name: Install Snapcraft
-        # Only install Snapcraft on Ubuntu
-        if: startsWith(matrix.os, 'ubuntu')
-        uses: samuelmeuli/action-snapcraft@v1
-      - name: Login to Snapcraft
-        if: startsWith(matrix.os, 'ubuntu')
-        env:
-          SNAPCRAFT_STORE_CREDENTIALS: '{"token": "${{ secrets.SNAPCRAFT_TOKEN | b64enc }}"}'
-        run: |
-          snapcraft login
 
       - name: Build/release Electron app
         uses: samuelmeuli/action-electron-builder@v1
