--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "@types/progress-stream": "^2.0.2",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
-    "electron": "^16.0.6",
-    "electron-builder": "^22.14.5",
+    "electron": "22.0.2",
+    "electron-builder": "^23.6.0",
     "esbuild": "^0.14.11",
     "eslint": "^7.32.0",
     "prettier": "^2.8.3",
