--- a/.eslintrc
+++ b/.eslintrc
@@ -4,6 +4,9 @@
     "node": true,
     "commonjs": true
   },
+  "globals": {
+    "NodeJS": true
+  },
   "parser": "vue-eslint-parser",
   "parserOptions": {
     "parser": "@typescript-eslint/parser"
