make version available through build

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -8,6 +8,7 @@
     "outDir": "build",
     "esModuleInterop": true,
     "experimentalDecorators": true,
+    "resolveJsonModule": true,
     "baseUrl": ".",
     "types": [
       "@types/node"
