--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "weebsync",
-  "version": "0.6",
+  "version": "0.6.0a",
   "description": "A small tool to automatically sync files from an ftp server.",
   "license": "MIT",
   "private": true,
