--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "server",
-  "version": "0.5.14",
+  "version": "0.6.0a",
   "description": "A small tool to automatically sync files from an ftp server.",
   "license": "MIT",
   "main": "./build/main.js",
