--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "client",
-  "version": "0.6.0a",
+  "version": "0.6.0b",
   "description": "A small tool to automatically sync files from an ftp server.",
   "license": "MIT",
   "main": "./build/main.js",
