build pipeline try 2

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "assets": [
       "build/client/**/*"
     ],
+    "outputPath": "dist",
     "targets": [
       "node18-linuxstatic",
       "node18-win-x64",
