--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,9 @@
 name: Node.js CI
 
-on: push
+on:
+  push:
+    tags:
+       - 'v[0-9]+.[0-9]+.[0-9]+'
 
 jobs:
   build:
@@ -49,9 +52,6 @@ jobs:
       matrix:
         os: [linuxstatic, macos, win.exe]
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
       - name: Upload asset
         uses: actions/upload-release-asset@v1
         env:
