--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,7 +57,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ needs.build.outputs.upload_url }}
+          upload_url: ${{ needs.build.outputs.create_release.upload_url }}
           asset_path: ./dist/weebsync-${{ matrix.os }}
           asset_name: weebsync-${{ matrix.os }}
           asset_content_type: application/octet-stream
