--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,8 @@ jobs:
       - name: Package Application
         run: yarn pkg .
 
+      - run: ls -lA
+
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
