--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,11 @@ jobs:
       - name: Package Application
         run: yarn pkg .
 
-      - run: cd dist && ls -lA
+      - name: Archive production artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: weebsync
+          path: ./dist/
 
       - name: Create Release
         id: create_release
@@ -57,6 +61,11 @@ jobs:
       matrix:
         os: [linuxstatic, macos, win.exe]
     steps:
+      - name: Download artifacts
+        uses: actions/download-artifact@v2
+        with:
+          name: weebsync
+          path: ./dist/
       - name: Upload asset
         uses: actions/upload-release-asset@v1
         env:
