fix multiple bugs & make connections much more stable

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "weebsync",
-  "version": "0.6.2",
+  "version": "0.6.3",
   "description": "A small tool to automatically sync files from an ftp server.",
   "license": "MIT",
   "private": true,
@@ -21,7 +21,7 @@
     "client:dev": "cd client && yarn dev",
     "server:dev": "cd server && yarn dev",
     "server:build": "cd server && yarn build",
-    "build": "yarn run client:build && yarn run server:build && rollup -c --bundleConfigAsCjs && rm build/index.mjs",
+    "build": "yarn run client:build && yarn run server:build",
     "start": "node build/index.js",
     "lint": "eslint -c .eslintrc --ext .ts ./src",
     "publishVersion": "PACKAGE_VERSION=$(cat package.json | grep \\\"version\\\" | head -1 | awk -F: '{ print $2 }' | sed 's/[\",]//g' | tr -d '[[:space:]]') && git tag v$PACKAGE_VERSION && git push --tags"
