--- a/.eslintrc
+++ b/.eslintrc
@@ -14,11 +14,14 @@
   "extends": [
     "plugin:vue/strongly-recommended",
     "eslint:recommended",
-    "plugin:vue/vue3-recommended"
+    "plugin:vue/vue3-recommended",
+    "prettier"
   ],
-  "plugins": ["@typescript-eslint"],
+  "plugins": ["@typescript-eslint", "prettier"],
   "rules": {
+    "prettier/prettier": ["error"],
     "no-unused-vars": "off",
     "@typescript-eslint/no-unused-vars": ["error"]
   }
 }
+
