--- a/package.json
+++ b/package.json
@@ -37,7 +37,10 @@
     "@typescript-eslint/eslint-plugin": "^5.61.0",
     "@typescript-eslint/parser": "^5.61.0",
     "eslint": "^8.44.0",
-    "pkg": "^5.8.1"
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "pkg": "^5.8.1",
+    "prettier": "^3.0.0"
   },
   "dependencies": {
     "@rollup/plugin-commonjs": "^25.0.2",
