--- a/package.json
+++ b/package.json
@@ -40,13 +40,14 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^5.0.0",
     "pkg": "^5.8.1",
-    "prettier": "^3.0.0"
+    "prettier": "^3.0.0",
+    "typescript": "5.1.6"
   },
   "dependencies": {
     "@rollup/plugin-commonjs": "^25.0.2",
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.1.0",
-    "rollup": "^3.26.2",
+    "rollup": "^2.0.0",
     "rollup-plugin-terser": "^7.0.2"
   }
 }
